# campus-connect-ui

./: DEVELOPMENT.md  README.md  SUGGESTION.md  add_sample_data.py  index.html  package.json  playground-1.mongodb.js  render.yaml  suggestion.txt  tailwind.config.ts  test_profile_feature.md
.github/: FUNDING.yml
backend/: .gitignore  README.md  add_random_quantities.py  config.py (for storing JWT secret key and other security-related configurations)  connect_listings_to_sellers.py  database.py (potential updates for user storage and retrieval)  dependencies.py (new, for FastAPI dependency injection of current user)  gunicorn_config.py (new file)  main.py  main.py (or equivalent FastAPI entry point, for modification to be callable by Gunicorn)  pyproject.toml  requirements.txt  run.py  start.bat  update_categories_backup.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  chat.py  featured.py  listing.py  rating.py  report.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  chat.py  home.py  listings.py  ratings.py  reports.py  users.py
backend/app/schemas/: __init__.py  auth.py  chat.py  featured.py  listing.py  rating.py  report.py  response.py  user.py
backend/models/: user.py (new Pydantic model for user data and MongoDB schema)
backend/routers/: auth.py (new)
backend/services/: auth.py (new business logic for authentication)
scripts/: README.md  backup.bat  backup_database.py  backup_project.py  requirements.txt  restore.bat  restore_database.py  restore_project.py
src/: App.tsx  index.css  routes.tsx
(+42 files in other folders)
